--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"]
 rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
 serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }
+dotenv = "0.15.0"
