--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,8 @@ rand = "0.8.5"
 rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
 rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_with = "3.0.0"
 sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }
 dotenv = "0.15.0"
+regex = "1.9.1"
+
