--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,4 @@
-[package]
-name = "delirium"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["server", "macros"]
 
-[dependencies]
-anyhow = "1.0.71"
-env_logger = "0.10.0"
-figment = { version = "0.10.10", features = ["toml", "env"] }
-jsonwebtoken = "8.3.0"
-log = { version = "0.4.19", features = ["serde"] }
-rand = "0.8.5"
-rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
-rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_with = "3.0.0"
-sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }
-dotenv = "0.15.0"
-regex = "1.9.1"
-
+resolver = "2"
